# microservice-create-tickets-in-zohodesk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  product_map.json.example  pyproject.toml
.github/workflows/: ci.yml
src/app/: config.py  main.py
src/clients/: token_client.py  zoho_desk.py
src/core/: logging_config.py  middleware.py
src/schemas/: tickets.py
