[project]
name = "microservice-create-zoho-desk-ticket"
version = "0.1.0"
description = "Microservice that creates Zoho Desk tickets via the REST API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2,<3",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    # Explicit auto-instrumentors — uv venvs ship without pip, so
    # `opentelemetry-bootstrap -a install` can't install them at build
    # time. Listing them here gets them into uv.lock instead.
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pip-audit>=2.7",
]

# ---- pytest ---------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ---- ruff -----------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

# ---- mypy -----------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
